# OmniStream

./: .clang-format  .gitignore  .pre-commit-config.yaml  LICENSE  README.en.md  README.md  README_en.md  build_gcc.sh  build_pipeline.sh
cpp/: CMakeLists.txt
cpp/basictypes/: Array.cpp  Arrays.cpp  CMakeLists.txt  Class.cpp  ClassConstant.cpp  Double.cpp  Integer.cpp  JavaArray.cpp  Long.cpp  LongObjectPool.cpp  Object.cpp  String.cpp  StringBuilder.cpp  StringConstant.cpp  StringView.cpp  Tuple2.cpp  java_io_InputStream.cpp  java_lang_Boolean.cpp  java_lang_ClassLoader.cpp  java_lang_Enum.cpp  java_lang_IllegalArgumentException.cpp  java_lang_reflect_Type.cpp  java_util_Collection.cpp  java_util_HashMap.cpp  java_util_Iterator.cpp  java_util_List.cpp  java_util_Map_Entry.cpp  java_util_Set.cpp
cpp/conf/: depend_class.properties  depend_include.properties  depend_interface.config  function.properties  ignoredClasses.config  ignoredMethods.config  ignoredPackage.config  log4j2.xml  stdStringMethods.config  udf_generic.config  udf_tune.properties
cpp/connector/: CMakeLists.txt
cpp/connector-kafka/: CMakeLists.txt  bind_core_manager.h  omni_kafka_opt.patch
cpp/connector-kafka/sink/: DeliveryGuarantee.h  DynamicKafkaRecordSerializationSchema.cpp  DynamicKafkaRecordSerializationSchema.h  FlinkFixedPartitioner.h  FlinkKafkaInternalProducer.cpp  FlinkKafkaInternalProducer.h  KafkaCommittable.cpp  KafkaCommittable.h  KafkaCommittableSerializer.cpp  KafkaCommittableSerializer.h  KafkaCommitter.cpp  KafkaCommitter.h  KafkaRecordSerializationSchema.h  KafkaSink.cpp  KafkaSink.h  KafkaWriter.cpp  KafkaWriter.h  KafkaWriterState.cpp  KafkaWriterState.h  KafkaWriterStateSerializer.cpp  KafkaWriterStateSerializer.h  KeyValueByteContainer.h  ProducerConfig.h  Recyclable.cpp  Recyclable.h  TransactionAborter.cpp  TransactionAborter.h  TransactionalIdFactory.cpp  TransactionalIdFactory.h
cpp/connector-kafka/source/: ConsumerConfig.h  KafkaSource.cpp  KafkaSource.h  unordered_dense.h
cpp/connector-kafka/utils/: ConfigLoader.cpp  ConfigLoader.h
cpp/connector/kafka/: bind_core_manager.h
cpp/core/: CMakeLists.txt  common.cpp
cpp/core/api/: ListState.h  MapState.h  ValueState.h
cpp/core/committables/: CheckpointCommittableManager.h  CheckpointCommittableManagerImpl.cpp  CheckpointCommittableManagerImpl.h  CommitRequestImpl.cpp  CommitRequestImpl.h  CommittableCollector.cpp  CommittableCollector.h  CommittableManager.h  CommittableMessage.h  CommittableSummary.h  CommittableWithLineage.h  Committer.h  SubtaskCommittableManager.cpp  SubtaskCommittableManager.h
cpp/core/configuration/: ConfigOption.cpp  ConfigOption.h  ConfigOptions.cpp  ConfigOptions.h  FallbackKey.h  MemorySize.cpp  MemorySize.h
cpp/core/fs/: CloseableRegistry.h  FSDataInputStream.h  FileSystemSafetyNet.h  Path.h
cpp/core/graph/: NonChainedOutput.cpp  NonChainedOutput.h  OperatorChainConfig.cpp  OperatorChainConfig.h  OperatorConfig.cpp  OperatorConfig.h  TaskPartitionerConfig.cpp  TaskPartitionerConfig.h  readme.md
cpp/core/include/: common.h  emhash7.hpp  omni_const.h  outputbuffer.h  udf_hash.h
cpp/core/io/: AbstractStreamTaskNetworkInput.cpp  AbstractStreamTaskNetworkInput.h  AsyncDataOutputToOutput.h  DataInputDeserializer.cpp  DataInputDeserializer.h  DataInputStatus.h  DataInputView.h  DataOutput.h  DataOutputSerializer.h  DeserializationResult.cpp  DeserializationResult.h  IOReadableWritable.h  InputStatus.h  NonSpanningWrapper.cpp  NonSpanningWrapper.h  RecordDeserializer.h  RecordWriterOutput.cpp  RecordWriterOutput.h  SimpleVersionedSerialization.h  SimpleVersionedSerializer.h  SpanningWrapper.cpp  SpanningWrapper.h  SpillingAdaptiveSpanningRecordDeserializer.cpp  SpillingAdaptiveSpanningRecordDeserializer.h  StreamOneInputProcessor.cpp  StreamOneInputProcessor.h  StreamTaskNetworkInputFactory.cpp  StreamTaskNetworkInputFactory.h
cpp/core/memory/: DataInputDeserializer.h  DataInputView.h  DataOutputSerializer.h  MemorySegment.cpp  MemorySegment.h  MemorySegmentFactory.cpp  MemorySegmentFactory.h  MemorySegmentUtils.h  Segment.h
cpp/core/metrics/: Counter.h  MetricGroup.h  SimpleCounter.cpp  SimpleCounter.h  WatermarkGauge.cpp  WatermarkGauge.h
cpp/datagen/: CMakeLists.txt
cpp/functions/: AbstractRichFunction.cpp  CMakeLists.txt  Configuration.cpp  Function.cpp  IterationRuntimeContext.cpp  OpenContext.cpp  RichFunction.cpp  Watermark.cpp
cpp/jni/: CMakeLists.txt  init.cpp
cpp/runtime/: CMakeLists.txt
cpp/streaming/: CMakeLists.txt
cpp/table/: CMakeLists.txt  KeySelector.cpp  KeySelector.h  PackageTable.cpp  PackageTable.h  Row.cpp  Row.h  RowKind.h  rowdata_marshaller.h
cpp/taskRevert/: BinaryRowDataSerializer.cpp  BinaryRowDataSerializer.h  BufferWritingResultPartition.java  OmniLocalChannelReader.cpp  OmniLocalChannelReader.h  OmniPipelinedSubpartitionView.java  OmniTask.java
cpp/taskRevert2/: BinaryRowDataSerializer.cpp  BinaryRowDataSerializer.h  CheckpointedInputGate.cpp  CheckpointedInputGate.h  InputChannel.cpp  InputChannel.h  InputChannelInfo.cpp  InputChannelInfo.h  InputGate.cpp  InputGate.h  OmniAbstractStreamTaskNetworkInput.h  OmniLocalInputChannel.cpp  OmniOneInputStreamTask.cpp  OmniStreamTwoInputProcessorFactory.h  OmniTwoInputStreamTask.cpp  Row_to_Native_local_transfer.patch  StreamElementSerializer.cpp
cpp/test/: CMakeLists.txt  globals.h  test_util_new.cpp  test_util_new.h  tneltest.cpp
cpp/thirdlibrary/: CMakeLists.txt  DataStream.cpp  DataStreamSource.cpp  JavaArrays.cpp  ParameterTool.cpp  SingleOutputStreamOperator.h.cpp  StreamExecutionEnvironment.cpp  java_lang_CharSequence.cpp  java_lang_System.cpp  java_lang_Thread.cpp  java_lang_Throwable.cpp  java_time_Instant.cpp  java_time_LocalDateTime.cpp  java_time_ZoneId.cpp  java_time_format_DateTimeFormatter.cpp  java_time_temporal_TemporalAccessor.cpp  java_util_Properties.cpp  java_util_Random.cpp  java_util_regex_Matcher.cpp  java_util_regex_Pattern.cpp  org_slf4j_Logger.cpp  org_slf4j_LoggerFactory.cpp
cpp/util/: MathUtils.h  OutputTag.h
cpp/zemo/: CMakeLists.txt  demoOne.cpp
java/: pom.xml
(+2585 files in other folders)
